--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <div class="container">
   <div class="card">
   <h1>Hello, I'm Nakia!</h1>
-<img src="https://github.com/NWJP/profile/blob/master/images/profile.PNG" id="leader">
+<img src="/images/profile.PNG" id="leader">
 <p>I'm a <em>full stack rails developer</em> that's committed, hardworking, and reliable.
   I'm currently located in Hiroshima, Japan.
   I have experience in leadership, training others, and working as as team.
